# snupi-slides-skill

./: .gitignore  README.md
skills/snupi-presentation-slides-en/: SKILL.md  package-lock.json  package.json  pyproject.toml
skills/snupi-presentation-slides-en/agents/: openai.yaml
skills/snupi-presentation-slides-en/assets/template-html/: index.html  styles.css
skills/snupi-presentation-slides-en/examples/: literature-review-request.md  literature-review.deck-spec.json
skills/snupi-presentation-slides-en/references/: brief-format.md  deck-recipes.md  deck-spec.md  interview-checklist.md  layout-catalog.md  paper-ingestion.md  paper-intake-and-figure-workflow.md  slides-grab-setup.md  snupi-style-guide.md  template-html-workflow.md
skills/snupi-presentation-slides-en/scripts/: build_deck.js  extract_paper_assets.py  layout_metrics.js
skills/snupi-presentation-slides-ko/: SKILL.md
skills/snupi-presentation-slides-ko/agents/: openai.yaml
skills/snupi-presentation-slides-ko/references/: deck-recipes.md  interview-checklist.md  paper-intake-and-figure-workflow.md  slides-grab-setup.md  snupi-style-guide.md  template-html-workflow.md
template/template_html/: deck.js
