[project]
name = "snupi-presentation-slides-en-tools"
version = "0.1.0"
description = "Paper ingestion and slide validation helpers for the SNUPI slide skill"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "numpy>=2,<3",
  "pdf2image>=1.17,<2",
  "pdfplumber>=0.11,<0.12",
  "Pillow>=10,<12",
  "pypdf>=5,<6",
  "python-pptx>=0.6.23,<2",
  "requests>=2.32,<3",
]

[tool.uv]
package = false
